# CS205-ADMM

./: A.csv  CMakeLists.txt  README.md  b.csv  generate_lasso_data.py  gogo_modules.sh  installation.md  memory_profiling.sh  performance.md  performance_analysis.ipynb  solution.csv  test_threads.sh
mpi_lasso_C/: Makefile
perf_results/: .output_16_16.txt.swp  output_16_1.txt  output_16_16.txt  output_16_2.txt  output_16_4.txt  output_16_8.txt  output_32_1.txt  output_32_16.txt  output_32_2.txt  output_32_4.txt  output_32_8.txt  output_64_1.txt  output_64_16.txt  output_64_2.txt  output_64_4.txt  output_64_8.txt  output_8_16.txt  output_8_8.txt
src/: lasso_reg_path.cpp  lasso_serial.cpp  xtensor_lasso.cpp
